force-app/src/objects/OrderApi__Item__c.object
<CustomObject>
    <fields>
        <fullName>OrderApi__Line_Description__c</fullName>
        <description>The description for the item as it should appear on related receipts and invoices. This field is limited to 255 characters.</description>
        <inlineHelpText>The description for the item as it should appear on related receipts and invoices. This field is limited to 255 characters.</inlineHelpText>
        <label>Line Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Maximum_Number_of_Assignments__c</fullName>
        <description>** Conditionally Required ** If &quot;Restrict Number of Assignments&quot; is checked, a maximum number of assignments must be defined.</description>
        <inlineHelpText>** Conditionally Required ** If &quot;Restrict Number of Assignments&quot; is checked, a maximum number of assignments must be defined.</inlineHelpText>
        <label>Maximum Number of Assignments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Maximum_Number_of_Downloads__c</fullName>
        <description>** Conditionally Required ** The value of this field will be used to restrict the number of times a customer can access a downloadable file via the API. Valid for &quot;Is Downloadable&quot; Items. Required when &quot;Restrict Number of Downloads&quot; is checked.</description>
        <inlineHelpText>** Conditionally Required ** The value of this field will be used to restrict the number of times a customer can access a downloadable file via the API. Valid for &quot;Is Downloadable&quot; Items. Required when &quot;Restrict Number of Downloads&quot; is checked.</inlineHelpText>
        <label>Maximum Number of Downloads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Maximum_Value__c</fullName>
        <description>Set the high end of the range of item values this shipping rate applies to.</description>
        <inlineHelpText>Set the high end of the range of item values this shipping rate applies to.</inlineHelpText>
        <label>Maximum Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Maximum_Weight__c</fullName>
        <description>Defines the high end of the range of item weights this shipping rate applies to.</description>
        <inlineHelpText>Set the high end of the range of item weights this Shipping Rate applies to.</inlineHelpText>
        <label>Maximum Weight</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Minimum_Value__c</fullName>
        <description>Set the low end of the range of item values this shipping rate applies to.</description>
        <inlineHelpText>Set the low end of the range of item values this shipping rate applies to.</inlineHelpText>
        <label>Minimum Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Minimum_Weight__c</fullName>
        <description>Defines the low end of the range of item weights this shipping rate applies to.</description>
        <inlineHelpText>Set the low end of the range of item weights this Shipping Rate applies to.</inlineHelpText>
        <label>Minimum Weight</label>
        <precision>16</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Not_For_Individual_Sale__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the Item will be restricted to only being included in sales as part of a Package Item. Defaults unchecked.</description>
        <inlineHelpText>When checked, the Item will be restricted to only being included in sales as part of a Package Item. Defaults unchecked.</inlineHelpText>
        <label>Not For Individual Sale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Package_Items__c</fullName>
        <description>This field aggregates the total number of package items.</description>
        <inlineHelpText>This field aggregates the total number of package items.</inlineHelpText>
        <label>Package Items</label>
        <summaryForeignKey>OrderApi__Package_Item__c.OrderApi__Package__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OrderApi__Parent_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to define the parent item used in bundles, items with attributes, and other advanced item options.</description>
        <inlineHelpText>This field is used to define the parent item used in bundles, items with attributes, and other advanced item options.</inlineHelpText>
        <label>RESERVED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Price__c</fullName>
        <description>The default price for the item will be used to automatically create the default price rule which can only be edited by updating the price of the item.</description>
        <inlineHelpText>The default price for the item will be used to automatically create the default price rule which can only be edited by updating the price of the item.</inlineHelpText>
        <label>Item Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Refund_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The account to debit when refunding/crediting customers who have purchased this Item.</description>
        <inlineHelpText>The account to debit when refunding/crediting customers who have purchased this Item.</inlineHelpText>
        <label>Refund/Credit Account</label>
        <referenceTo>OrderApi__GL_Account__c</referenceTo>
        <relationshipLabel>Items (Refund_Account)</relationshipLabel>
        <relationshipName>Refund_Account_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Renewal_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>When defined, the member will be presented with this form as the first step during renewals.</description>
        <inlineHelpText>When defined, the member will be presented with this form as the first step during renewals.</inlineHelpText>
        <label>Renewal Form</label>
        <referenceTo>PagesApi__Form__c</referenceTo>
        <relationshipLabel>Renewed Items</relationshipLabel>
        <relationshipName>RenewedItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Require_Assignments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, a user will be unable to complete a sale for an Item until all assignments available have been entered. Defaults unchecked.</description>
        <inlineHelpText>When checked, a user will be unable to complete a sale for an Item until all assignments available have been entered. Defaults unchecked.</inlineHelpText>
        <label>Require Assignments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Require_PreAuthorized_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>** Used with extended applications ** By checking this field, purchasing this item will required pre-authorization before being charged by a subsequent action.</description>
        <inlineHelpText>** Used with extended applications ** By checking this field, purchasing this item will required pre-authorization before being charged by a subsequent action.</inlineHelpText>
        <label>Require PreAuthorized Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Require_Shipping__c</fullName>
        <defaultValue>false</defaultValue>
        <description>** System Calculated Override ** Enable delivery specific controls and features for this Item. Defaults to the value of the same field on the Item&apos;s related Item Class.</description>
        <inlineHelpText>** System Calculated Override ** Enable delivery specific controls and features for this Item. Defaults to the value of the same field on the Item&apos;s related Item Class.</inlineHelpText>
        <label>Require Shipping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Required_Package_Items__c</fullName>
        <description>This field aggregates the total number of required package items needed to fulfill a sales order with this item.</description>
        <inlineHelpText>This field aggregates the total number of required package items needed to fulfill a sales order with this item.</inlineHelpText>
        <label>Required Package Items</label>
        <summaryFilterItems>
            <field>OrderApi__Package_Item__c.OrderApi__Is_Required__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OrderApi__Package_Item__c.OrderApi__Minimum_Quantity__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>OrderApi__Package_Item__c.OrderApi__Package__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OrderApi__Restrict_Number_of_Assignments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the system will limit the number of assignments allowed based on the value of the &quot;Maximum Number of Assignments&quot; field. Defaults unchecked.</description>
        <inlineHelpText>When checked, the system will limit the number of assignments allowed based on the value of the &quot;Maximum Number of Assignments&quot; field. Defaults unchecked.</inlineHelpText>
        <label>Restrict Number of Assignments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Restrict_Number_of_Downloads__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the customer will have access restricted if the downloadable file has been accessed more than the allowed amount defined in the &quot;Maximum Number of Downloads&quot; field. Defaults unchecked.</description>
        <inlineHelpText>When checked, the customer will have access restricted if the downloadable file has been accessed more than the allowed amount defined in the &quot;Maximum Number of Downloads&quot; field. Defaults unchecked.</inlineHelpText>
        <label>Restrict Number of Downloads</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Revenue_Recognition_Date__c</fullName>
        <label>Revenue Recognition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Revenue_Recognition_Rule__c</fullName>
        <label>Revenue Recognition Rule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Over Time</fullName>
                </value>
                <value>
                    <fullName>Specific Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderApi__Revenue_Recognition_Term_Rule__c</fullName>
        <label>Revenue Recognition Term Rule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Partial Credit</fullName>
                </value>
                <value>
                    <fullName>Flex Day</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderApi__SKU__c</fullName>
        <description>A SKU (Stock Keeping Unit) is a unique Item identifier that references attributes associated with the Item and that distinguish it from all other Items primarily used for inventory control and management.</description>
        <inlineHelpText>A SKU (Stock Keeping Unit) is a unique Item identifier that references attributes associated with the Item and that distinguish it from all other Items primarily used for inventory control and management.</inlineHelpText>
        <label>SKU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Shipping_Method__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to select a Delivery Method associated with this rate.</description>
        <inlineHelpText>Select the Delivery Method associated with this rate.</inlineHelpText>
        <label>Delivery Method</label>
        <referenceTo>OrderApi__Shipping_Method__c</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Shipping_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to select the Shipping Region associated with this rate.</description>
        <inlineHelpText>Select the Shipping Region associated with this rate.</inlineHelpText>
        <label>Shipping Region</label>
        <referenceTo>OrderApi__Shipping_Region__c</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Subscription_Plan_Display_Label__c</fullName>
        <description>The label to display in the wizard for the step related to selecting a subscription plan.</description>
        <inlineHelpText>The label to display in the wizard for the step related to selecting a subscription plan.</inlineHelpText>
        <label>Subscription Plan Display Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Tax_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Populate this field for an item that needs to apply a tax.</description>
        <inlineHelpText>Populate this field for an item that needs to apply a tax.</inlineHelpText>
        <label>Tax Class</label>
        <referenceTo>OrderApi__Item_Class__c</referenceTo>
        <relationshipLabel>Tax Items</relationshipLabel>
        <relationshipName>Tax_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Tax_Locale__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Links the Item to the tax locale.</description>
        <inlineHelpText>Links the Item to the tax locale.</inlineHelpText>
        <label>Tax Locale</label>
        <referenceTo>OrderApi__Tax_Locale__c</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Tax_Percent__c</fullName>
        <description>The rate to be used to calculate the tax amount assigned to taxable items.</description>
        <inlineHelpText>The rate to be used to calculate the tax amount assigned to taxable items.</inlineHelpText>
        <label>Tax Percent</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OrderApi__UPC__c</fullName>
        <description>A UPC (Universal Product Code) is a 13 digit catalog number uniquely assigned to an Item required to generate UPC barcodes.</description>
        <inlineHelpText>A UPC (Universal Product Code) is a 13 digit catalog number uniquely assigned to an Item required to generate UPC barcodes.</inlineHelpText>
        <label>UPC</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__eStore_Description__c</fullName>
        <description>The value in this field is presented on the item detail page in the estore.</description>
        <inlineHelpText>The value in this field is presented on the item detail page in the estore.</inlineHelpText>
        <label>eStore Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>OrderApi__eStore_Short_Description__c</fullName>
        <description>The value in this field will display in the eStore&apos;s item detail page summary section.</description>
        <inlineHelpText>The value in this field will display in the eStore&apos;s item detail page summary section.</inlineHelpText>
        <label>eStore Short Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROEApi__Item_Class_Name__c</fullName>
        <description>**System Calculated** Item Class Name</description>
        <formula>OrderApi__Item_Class__r.Name</formula>
        <inlineHelpText>**System Calculated** Item Class Name</inlineHelpText>
        <label>SYSTEM</label>
        <type>Text</type>
    </fields>
    <label>Item</label>
    <listViews>
        <fullName>OrderApi__All</fullName>
        <columns>NAME</columns>
        <columns>OrderApi__SKU__c</columns>
        <columns>OrderApi__Item_Class__c</columns>
        <columns>OrderApi__Business_Group__c</columns>
        <columns>OrderApi__Income_Account__c</columns>
        <columns>OrderApi__Cost__c</columns>
        <columns>OrderApi__Price__c</columns>
        <columns>OrderApi__Is_Active__c</columns>
        <columns>OrderApi__Image_Path__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>